Updating with 2021 GW1 data

--- a/templates/forwards.html
+++ b/templates/forwards.html
@@ -27,243 +27,243 @@
   </thead>
   <tbody>
     <tr>
-      <th>Bamford</th>
-      <td>Leeds</td>
+      <th>Dennis</th>
+      <td>Watford</td>
       <td>Forward</td>
-      <td>4.8</td>
-      <td>28.923077</td>
-      <td>6.5</td>
-      <td>27.053280</td>
-      <td>175.846318</td>
-      <td>11.871776</td>
+      <td>12.0</td>
+      <td>2.400000</td>
+      <td>5.0</td>
+      <td>2.292202</td>
+      <td>11.461010</td>
+      <td>19.164796</td>
       <td>1.0</td>
     </tr>
     <tr>
-      <th>Kane</th>
-      <td>Spurs</td>
+      <th>Antonio</th>
+      <td>West Ham</td>
       <td>Forward</td>
-      <td>2.8</td>
-      <td>19.495798</td>
-      <td>11.9</td>
-      <td>20.360589</td>
-      <td>242.291008</td>
-      <td>10.587210</td>
+      <td>13.0</td>
+      <td>1.733333</td>
+      <td>7.5</td>
+      <td>1.819939</td>
+      <td>13.649545</td>
+      <td>17.883020</td>
       <td>2.0</td>
-    </tr>
-    <tr>
-      <th>Watkins</th>
-      <td>Aston Villa</td>
-      <td>Forward</td>
-      <td>4.4</td>
-      <td>25.937500</td>
-      <td>6.4</td>
-      <td>25.196920</td>
-      <td>161.260287</td>
-      <td>10.359373</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
-      <th>Firmino</th>
-      <td>Liverpool</td>
-      <td>Forward</td>
-      <td>5.8</td>
-      <td>14.945055</td>
-      <td>9.1</td>
-      <td>22.367069</td>
-      <td>203.540332</td>
-      <td>9.642110</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Wood</th>
-      <td>Burnley</td>
-      <td>Forward</td>
-      <td>7.2</td>
-      <td>20.923077</td>
-      <td>6.5</td>
-      <td>19.943351</td>
-      <td>129.631780</td>
-      <td>9.429835</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Calvert-Lewin</th>
-      <td>Everton</td>
-      <td>Forward</td>
-      <td>4.2</td>
-      <td>21.447368</td>
-      <td>7.6</td>
-      <td>21.563596</td>
-      <td>163.883326</td>
-      <td>9.147734</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Vardy</th>
-      <td>Leicester</td>
-      <td>Forward</td>
-      <td>3.8</td>
-      <td>17.058824</td>
-      <td>10.2</td>
-      <td>19.054352</td>
-      <td>194.354386</td>
-      <td>8.817880</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Adams</th>
-      <td>Southampton</td>
-      <td>Forward</td>
-      <td>4.5</td>
-      <td>24.035088</td>
-      <td>5.7</td>
-      <td>22.702601</td>
-      <td>129.404827</td>
-      <td>8.806338</td>
-      <td>8.0</td>
     </tr>
     <tr>
       <th>Richarlison</th>
       <td>Everton</td>
       <td>Forward</td>
-      <td>3.7</td>
-      <td>15.844156</td>
-      <td>7.7</td>
-      <td>21.426864</td>
-      <td>164.986850</td>
-      <td>7.426870</td>
+      <td>11.0</td>
+      <td>1.466667</td>
+      <td>7.5</td>
+      <td>1.606758</td>
+      <td>12.050682</td>
+      <td>15.003076</td>
+      <td>3.0</td>
+    </tr>
+    <tr>
+      <th>Ings</th>
+      <td>Aston Villa</td>
+      <td>Forward</td>
+      <td>7.0</td>
+      <td>0.875000</td>
+      <td>8.0</td>
+      <td>1.029884</td>
+      <td>8.239071</td>
+      <td>8.597876</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Firmino</th>
+      <td>Liverpool</td>
+      <td>Forward</td>
+      <td>7.0</td>
+      <td>0.777778</td>
+      <td>9.0</td>
+      <td>0.988923</td>
+      <td>8.900309</td>
+      <td>8.574782</td>
+      <td>5.0</td>
+    </tr>
+    <tr>
+      <th>Saint-Maximin</th>
+      <td>Newcastle</td>
+      <td>Forward</td>
+      <td>6.0</td>
+      <td>0.923077</td>
+      <td>6.5</td>
+      <td>1.266715</td>
+      <td>8.233645</td>
+      <td>8.468016</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Calvert-Lewin</th>
+      <td>Everton</td>
+      <td>Forward</td>
+      <td>7.0</td>
+      <td>0.875000</td>
+      <td>8.0</td>
+      <td>0.941907</td>
+      <td>7.535254</td>
+      <td>8.158122</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Cucho</th>
+      <td>Watford</td>
+      <td>Forward</td>
+      <td>6.0</td>
+      <td>1.200000</td>
+      <td>5.0</td>
+      <td>1.083724</td>
+      <td>5.418619</td>
+      <td>7.951729</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>A.Armstrong</th>
+      <td>Southampton</td>
+      <td>Forward</td>
+      <td>6.0</td>
+      <td>1.000000</td>
+      <td>6.0</td>
+      <td>1.034314</td>
+      <td>6.205881</td>
+      <td>7.546202</td>
       <td>9.0</td>
     </tr>
     <tr>
       <th>Wilson</th>
       <td>Newcastle</td>
       <td>Forward</td>
-      <td>3.2</td>
-      <td>20.615385</td>
-      <td>6.5</td>
-      <td>19.852193</td>
-      <td>129.039255</td>
-      <td>7.188111</td>
+      <td>6.0</td>
+      <td>0.800000</td>
+      <td>7.5</td>
+      <td>0.938818</td>
+      <td>7.041136</td>
+      <td>7.170661</td>
       <td>10.0</td>
     </tr>
     <tr>
-      <th>Iheanacho</th>
-      <td>Leicester</td>
+      <th>Adams</th>
+      <td>Southampton</td>
       <td>Forward</td>
-      <td>6.3</td>
-      <td>17.419355</td>
-      <td>6.2</td>
-      <td>16.604838</td>
-      <td>102.949997</td>
-      <td>7.094367</td>
+      <td>5.0</td>
+      <td>0.714286</td>
+      <td>7.0</td>
+      <td>0.946044</td>
+      <td>6.622308</td>
+      <td>6.182167</td>
       <td>11.0</td>
     </tr>
     <tr>
-      <th>Benteke</th>
-      <td>Crystal Palace</td>
+      <th>Vardy</th>
+      <td>Leicester</td>
       <td>Forward</td>
-      <td>5.3</td>
-      <td>19.272727</td>
-      <td>5.5</td>
-      <td>18.528449</td>
-      <td>101.906468</td>
-      <td>7.016851</td>
+      <td>5.0</td>
+      <td>0.476190</td>
+      <td>10.5</td>
+      <td>0.660421</td>
+      <td>6.934420</td>
+      <td>5.308822</td>
       <td>12.0</td>
     </tr>
     <tr>
-      <th>Antonio</th>
-      <td>West Ham</td>
+      <th>Maupay</th>
+      <td>Brighton</td>
       <td>Forward</td>
-      <td>5.2</td>
-      <td>17.575758</td>
-      <td>6.6</td>
-      <td>16.606412</td>
-      <td>109.602321</td>
-      <td>6.777411</td>
+      <td>5.0</td>
+      <td>0.769231</td>
+      <td>6.5</td>
+      <td>0.722651</td>
+      <td>4.697229</td>
+      <td>5.225895</td>
       <td>13.0</td>
     </tr>
     <tr>
-      <th>Ings</th>
-      <td>Southampton</td>
+      <th>Rodriguez</th>
+      <td>Burnley</td>
       <td>Forward</td>
-      <td>3.5</td>
-      <td>15.357143</td>
-      <td>8.4</td>
-      <td>16.606660</td>
-      <td>139.495942</td>
-      <td>6.309952</td>
+      <td>2.0</td>
+      <td>0.363636</td>
+      <td>5.5</td>
+      <td>0.353245</td>
+      <td>1.942846</td>
+      <td>0.658387</td>
       <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Wood</th>
+      <td>Burnley</td>
+      <td>Forward</td>
+      <td>2.0</td>
+      <td>0.285714</td>
+      <td>7.0</td>
+      <td>0.327108</td>
+      <td>2.289758</td>
+      <td>0.525498</td>
+      <td>15.0</td>
     </tr>
     <tr>
       <th>Werner</th>
       <td>Chelsea</td>
       <td>Forward</td>
-      <td>3.5</td>
-      <td>13.804348</td>
-      <td>9.2</td>
-      <td>15.239328</td>
-      <td>140.201816</td>
-      <td>5.920980</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>Welbeck</th>
-      <td>Brighton</td>
-      <td>Forward</td>
-      <td>4.7</td>
-      <td>16.181818</td>
-      <td>5.5</td>
-      <td>15.726843</td>
-      <td>86.497635</td>
-      <td>5.341027</td>
+      <td>2.0</td>
+      <td>0.222222</td>
+      <td>9.0</td>
+      <td>0.293221</td>
+      <td>2.638993</td>
+      <td>0.458810</td>
       <td>16.0</td>
     </tr>
     <tr>
-      <th>McGoldrick</th>
-      <td>Sheffield Utd</td>
+      <th>Ayew</th>
+      <td>Crystal Palace</td>
       <td>Forward</td>
-      <td>3.2</td>
-      <td>17.500000</td>
-      <td>5.2</td>
-      <td>16.222270</td>
-      <td>84.355805</td>
-      <td>4.815697</td>
+      <td>2.0</td>
+      <td>0.333333</td>
+      <td>6.0</td>
+      <td>0.305380</td>
+      <td>1.832281</td>
+      <td>0.453332</td>
       <td>17.0</td>
     </tr>
     <tr>
-      <th>Rodrigo</th>
-      <td>Leeds</td>
+      <th>Toney</th>
+      <td>Brentford</td>
       <td>Forward</td>
-      <td>5.0</td>
-      <td>14.210526</td>
-      <td>5.7</td>
-      <td>14.164253</td>
-      <td>80.736242</td>
-      <td>4.777763</td>
+      <td>2.0</td>
+      <td>0.307692</td>
+      <td>6.5</td>
+      <td>0.290450</td>
+      <td>1.887922</td>
+      <td>0.373043</td>
       <td>18.0</td>
     </tr>
     <tr>
-      <th>Cavani</th>
-      <td>Man Utd</td>
+      <th>Pukki</th>
+      <td>Norwich</td>
       <td>Forward</td>
-      <td>4.2</td>
-      <td>12.375000</td>
-      <td>8.0</td>
-      <td>13.209961</td>
-      <td>105.679689</td>
-      <td>4.722685</td>
+      <td>2.0</td>
+      <td>0.333333</td>
+      <td>6.0</td>
+      <td>0.283864</td>
+      <td>1.703181</td>
+      <td>0.372668</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Decordova-Reid</th>
-      <td>Fulham</td>
+      <th>Jiménez</th>
+      <td>Wolves</td>
       <td>Forward</td>
-      <td>3.5</td>
-      <td>16.226415</td>
-      <td>5.3</td>
-      <td>15.865115</td>
-      <td>84.085111</td>
-      <td>4.627777</td>
+      <td>2.0</td>
+      <td>0.266667</td>
+      <td>7.5</td>
+      <td>0.271225</td>
+      <td>2.034188</td>
+      <td>0.280346</td>
       <td>20.0</td>
     </tr>
   </tbody>
