--- a/templates/goalies.html
+++ b/templates/goalies.html
@@ -27,243 +27,243 @@
   </thead>
   <tbody>
     <tr>
-      <th>Martínez</th>
-      <td>Aston Villa</td>
-      <td>Goalkeeper</td>
-      <td>3.1</td>
-      <td>33.888889</td>
-      <td>5.4</td>
-      <td>31.656489</td>
-      <td>170.945038</td>
-      <td>11.421903</td>
-      <td>1.0</td>
-    </tr>
-    <tr>
-      <th>Meslier</th>
-      <td>Leeds</td>
-      <td>Goalkeeper</td>
-      <td>3.6</td>
-      <td>32.083333</td>
-      <td>4.8</td>
-      <td>30.655854</td>
-      <td>147.148100</td>
-      <td>10.540929</td>
-      <td>2.0</td>
-    </tr>
-    <tr>
-      <th>Alisson</th>
-      <td>Liverpool</td>
-      <td>Goalkeeper</td>
-      <td>6.2</td>
-      <td>22.372881</td>
-      <td>5.9</td>
-      <td>22.768531</td>
-      <td>134.334336</td>
-      <td>9.975427</td>
-      <td>3.0</td>
-    </tr>
-    <tr>
       <th>Lloris</th>
       <td>Spurs</td>
       <td>Goalkeeper</td>
-      <td>4.2</td>
-      <td>26.250000</td>
-      <td>5.6</td>
-      <td>26.754662</td>
-      <td>149.826105</td>
-      <td>9.951225</td>
-      <td>4.0</td>
-    </tr>
-    <tr>
-      <th>Johnstone</th>
-      <td>West Brom</td>
-      <td>Goalkeeper</td>
-      <td>3.5</td>
-      <td>29.782609</td>
-      <td>4.6</td>
-      <td>29.626176</td>
-      <td>136.280411</td>
-      <td>9.649406</td>
-      <td>5.0</td>
-    </tr>
-    <tr>
-      <th>Ramsdale</th>
-      <td>Sheffield Utd</td>
-      <td>Goalkeeper</td>
-      <td>5.4</td>
-      <td>24.782609</td>
-      <td>4.6</td>
-      <td>27.628561</td>
-      <td>127.091380</td>
-      <td>9.631297</td>
-      <td>6.0</td>
-    </tr>
-    <tr>
-      <th>Mendy</th>
-      <td>Chelsea</td>
-      <td>Goalkeeper</td>
-      <td>4.0</td>
-      <td>26.730769</td>
-      <td>5.2</td>
-      <td>23.446205</td>
-      <td>121.920265</td>
-      <td>8.883986</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Pope</th>
-      <td>Burnley</td>
-      <td>Goalkeeper</td>
-      <td>2.8</td>
-      <td>26.181818</td>
-      <td>5.5</td>
-      <td>25.727919</td>
-      <td>141.503556</td>
-      <td>8.714214</td>
-      <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Pickford</th>
-      <td>Everton</td>
-      <td>Goalkeeper</td>
-      <td>5.3</td>
-      <td>23.333333</td>
-      <td>4.8</td>
-      <td>22.574328</td>
-      <td>108.356773</td>
-      <td>8.608671</td>
-      <td>9.0</td>
-    </tr>
-    <tr>
-      <th>Ederson</th>
-      <td>Man City</td>
-      <td>Goalkeeper</td>
-      <td>2.6</td>
-      <td>24.262295</td>
-      <td>6.1</td>
-      <td>23.610658</td>
-      <td>144.025011</td>
-      <td>8.319639</td>
       <td>10.0</td>
-    </tr>
-    <tr>
-      <th>Areola</th>
-      <td>Fulham</td>
-      <td>Goalkeeper</td>
-      <td>2.2</td>
-      <td>27.555556</td>
-      <td>4.5</td>
-      <td>26.344352</td>
-      <td>118.549584</td>
-      <td>7.732025</td>
-      <td>11.0</td>
-    </tr>
-    <tr>
-      <th>Leno</th>
-      <td>Arsenal</td>
-      <td>Goalkeeper</td>
-      <td>2.8</td>
-      <td>24.800000</td>
-      <td>5.0</td>
-      <td>24.270952</td>
-      <td>121.354759</td>
-      <td>7.717761</td>
-      <td>12.0</td>
+      <td>1.818182</td>
+      <td>5.5</td>
+      <td>1.670072</td>
+      <td>9.185397</td>
+      <td>17.162273</td>
+      <td>1.0</td>
     </tr>
     <tr>
       <th>Schmeichel</th>
       <td>Leicester</td>
       <td>Goalkeeper</td>
-      <td>2.3</td>
-      <td>24.074074</td>
-      <td>5.4</td>
-      <td>24.750533</td>
-      <td>133.652876</td>
-      <td>7.706849</td>
-      <td>13.0</td>
+      <td>9.0</td>
+      <td>1.800000</td>
+      <td>5.0</td>
+      <td>1.586244</td>
+      <td>7.931220</td>
+      <td>15.590363</td>
+      <td>2.0</td>
     </tr>
     <tr>
-      <th>Patrício</th>
+      <th>Raya</th>
+      <td>Brentford</td>
+      <td>Goalkeeper</td>
+      <td>8.0</td>
+      <td>1.777778</td>
+      <td>4.5</td>
+      <td>1.617225</td>
+      <td>7.277514</td>
+      <td>14.518706</td>
+      <td>3.0</td>
+    </tr>
+    <tr>
+      <th>Alisson</th>
+      <td>Liverpool</td>
+      <td>Goalkeeper</td>
+      <td>7.0</td>
+      <td>1.166667</td>
+      <td>6.0</td>
+      <td>1.217406</td>
+      <td>7.304436</td>
+      <td>11.534917</td>
+      <td>4.0</td>
+    </tr>
+    <tr>
+      <th>Woodman</th>
+      <td>Newcastle</td>
+      <td>Goalkeeper</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.369333</td>
+      <td>6.162000</td>
+      <td>10.843582</td>
+      <td>5.0</td>
+    </tr>
+    <tr>
+      <th>Mendy</th>
+      <td>Chelsea</td>
+      <td>Goalkeeper</td>
+      <td>6.0</td>
+      <td>1.000000</td>
+      <td>6.0</td>
+      <td>1.136879</td>
+      <td>6.821273</td>
+      <td>9.997345</td>
+      <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Sá</th>
       <td>Wolves</td>
       <td>Goalkeeper</td>
+      <td>3.0</td>
+      <td>0.600000</td>
+      <td>5.0</td>
+      <td>0.587136</td>
+      <td>2.935678</td>
+      <td>3.709852</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>McCarthy</th>
+      <td>Southampton</td>
+      <td>Goalkeeper</td>
       <td>2.0</td>
-      <td>24.716981</td>
-      <td>5.3</td>
-      <td>25.197287</td>
-      <td>133.545623</td>
-      <td>7.625286</td>
-      <td>14.0</td>
+      <td>0.444444</td>
+      <td>4.5</td>
+      <td>0.441414</td>
+      <td>1.986364</td>
+      <td>1.817765</td>
+      <td>8.0</td>
+    </tr>
+    <tr>
+      <th>Krul</th>
+      <td>Norwich</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.444444</td>
+      <td>4.5</td>
+      <td>0.440000</td>
+      <td>1.980000</td>
+      <td>1.812281</td>
+      <td>9.0</td>
     </tr>
     <tr>
       <th>Guaita</th>
       <td>Crystal Palace</td>
       <td>Goalkeeper</td>
       <td>2.0</td>
-      <td>25.416667</td>
-      <td>4.8</td>
-      <td>25.759793</td>
-      <td>123.647008</td>
-      <td>7.391401</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>Fabianski</th>
-      <td>West Ham</td>
-      <td>Goalkeeper</td>
-      <td>1.8</td>
-      <td>24.800000</td>
-      <td>5.0</td>
-      <td>24.917863</td>
-      <td>124.589316</td>
-      <td>7.180426</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Sánchez</th>
-      <td>Brighton</td>
-      <td>Goalkeeper</td>
-      <td>3.3</td>
-      <td>22.000000</td>
+      <td>0.444444</td>
       <td>4.5</td>
-      <td>21.735886</td>
-      <td>97.811488</td>
-      <td>6.661687</td>
-      <td>17.0</td>
-    </tr>
-    <tr>
-      <th>McCarthy</th>
-      <td>Southampton</td>
-      <td>Goalkeeper</td>
-      <td>1.7</td>
-      <td>20.909091</td>
-      <td>4.4</td>
-      <td>21.023855</td>
-      <td>92.504960</td>
-      <td>5.214579</td>
-      <td>18.0</td>
+      <td>0.415915</td>
+      <td>1.871619</td>
+      <td>1.718895</td>
+      <td>10.0</td>
     </tr>
     <tr>
       <th>de Gea</th>
       <td>Man Utd</td>
       <td>Goalkeeper</td>
-      <td>0.8</td>
-      <td>17.169811</td>
-      <td>5.3</td>
-      <td>17.697506</td>
-      <td>93.796784</td>
-      <td>3.978049</td>
+      <td>2.0</td>
+      <td>0.400000</td>
+      <td>5.0</td>
+      <td>0.410945</td>
+      <td>2.054723</td>
+      <td>1.688094</td>
+      <td>11.0</td>
+    </tr>
+    <tr>
+      <th>Sánchez</th>
+      <td>Brighton</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.444444</td>
+      <td>4.5</td>
+      <td>0.392882</td>
+      <td>1.767971</td>
+      <td>1.629587</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>Pickford</th>
+      <td>Everton</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.400000</td>
+      <td>5.0</td>
+      <td>0.394395</td>
+      <td>1.971977</td>
+      <td>1.616795</td>
+      <td>13.0</td>
+    </tr>
+    <tr>
+      <th>Martínez</th>
+      <td>Aston Villa</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.363636</td>
+      <td>5.5</td>
+      <td>0.386200</td>
+      <td>2.124103</td>
+      <td>1.593587</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Pope</th>
+      <td>Burnley</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.363636</td>
+      <td>5.5</td>
+      <td>0.382263</td>
+      <td>2.102444</td>
+      <td>1.574925</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Ederson</th>
+      <td>Man City</td>
+      <td>Goalkeeper</td>
+      <td>2.0</td>
+      <td>0.333333</td>
+      <td>6.0</td>
+      <td>0.350872</td>
+      <td>2.105230</td>
+      <td>1.448753</td>
+      <td>16.0</td>
+    </tr>
+    <tr>
+      <th>Bachmann</th>
+      <td>Watford</td>
+      <td>Goalkeeper</td>
+      <td>1.0</td>
+      <td>0.222222</td>
+      <td>4.5</td>
+      <td>0.218855</td>
+      <td>0.984846</td>
+      <td>-0.402163</td>
+      <td>17.0</td>
+    </tr>
+    <tr>
+      <th>Leno</th>
+      <td>Arsenal</td>
+      <td>Goalkeeper</td>
+      <td>1.0</td>
+      <td>0.200000</td>
+      <td>5.0</td>
+      <td>0.209778</td>
+      <td>1.048889</td>
+      <td>-0.441267</td>
+      <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Fabianski</th>
+      <td>West Ham</td>
+      <td>Goalkeeper</td>
+      <td>1.0</td>
+      <td>0.200000</td>
+      <td>5.0</td>
+      <td>0.207556</td>
+      <td>1.037778</td>
+      <td>-0.450841</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Darlow</th>
-      <td>Newcastle</td>
+      <th>Meslier</th>
+      <td>Leeds</td>
       <td>Goalkeeper</td>
-      <td>0.0</td>
-      <td>16.326531</td>
-      <td>4.9</td>
-      <td>16.732465</td>
-      <td>81.989076</td>
-      <td>2.862961</td>
+      <td>1.0</td>
+      <td>0.200000</td>
+      <td>5.0</td>
+      <td>0.201345</td>
+      <td>1.006724</td>
+      <td>-0.477599</td>
       <td>20.0</td>
     </tr>
   </tbody>
