--- a/templates/midfielders.html
+++ b/templates/midfielders.html
@@ -30,240 +30,240 @@
       <th>Salah</th>
       <td>Liverpool</td>
       <td>Midfielder</td>
-      <td>7.0</td>
-      <td>17.578125</td>
-      <td>12.8</td>
-      <td>19.766440</td>
-      <td>253.010427</td>
-      <td>14.487618</td>
+      <td>17.0</td>
+      <td>1.360000</td>
+      <td>12.5</td>
+      <td>2.312242</td>
+      <td>28.903030</td>
+      <td>26.387176</td>
       <td>1.0</td>
-    </tr>
-    <tr>
-      <th>Son</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>6.8</td>
-      <td>22.989691</td>
-      <td>9.7</td>
-      <td>22.693230</td>
-      <td>220.124332</td>
-      <td>14.475369</td>
-      <td>2.0</td>
     </tr>
     <tr>
       <th>Fernandes</th>
       <td>Man Utd</td>
       <td>Midfielder</td>
-      <td>5.2</td>
-      <td>21.403509</td>
-      <td>11.4</td>
-      <td>21.732479</td>
-      <td>247.750259</td>
-      <td>14.146088</td>
+      <td>20.0</td>
+      <td>1.666667</td>
+      <td>12.0</td>
+      <td>1.935636</td>
+      <td>23.227636</td>
+      <td>25.493928</td>
+      <td>2.0</td>
+    </tr>
+    <tr>
+      <th>Pogba</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>16.0</td>
+      <td>2.133333</td>
+      <td>7.5</td>
+      <td>2.158343</td>
+      <td>16.187576</td>
+      <td>22.151332</td>
       <td>3.0</td>
     </tr>
     <tr>
-      <th>Pereira</th>
-      <td>West Brom</td>
+      <th>Benrahma</th>
+      <td>West Ham</td>
       <td>Midfielder</td>
-      <td>5.5</td>
-      <td>28.333333</td>
-      <td>5.4</td>
-      <td>26.389699</td>
-      <td>142.504375</td>
-      <td>11.961893</td>
+      <td>12.0</td>
+      <td>2.000000</td>
+      <td>6.0</td>
+      <td>1.880778</td>
+      <td>11.284667</td>
+      <td>17.229475</td>
       <td>4.0</td>
     </tr>
     <tr>
-      <th>Harrison</th>
-      <td>Leeds</td>
+      <th>Canós</th>
+      <td>Brentford</td>
       <td>Midfielder</td>
-      <td>5.2</td>
-      <td>27.678571</td>
-      <td>5.6</td>
-      <td>25.006222</td>
-      <td>140.034842</td>
-      <td>11.500438</td>
+      <td>11.0</td>
+      <td>2.000000</td>
+      <td>5.5</td>
+      <td>1.891354</td>
+      <td>10.402444</td>
+      <td>16.361876</td>
       <td>5.0</td>
     </tr>
     <tr>
-      <th>Ward-Prowse</th>
-      <td>Southampton</td>
+      <th>Son</th>
+      <td>Spurs</td>
       <td>Midfielder</td>
-      <td>4.5</td>
-      <td>26.101695</td>
-      <td>5.9</td>
-      <td>25.960827</td>
-      <td>153.168882</td>
-      <td>11.165286</td>
+      <td>10.0</td>
+      <td>1.000000</td>
+      <td>10.0</td>
+      <td>1.221458</td>
+      <td>12.214577</td>
+      <td>12.345792</td>
       <td>6.0</td>
+    </tr>
+    <tr>
+      <th>Mac Allister</th>
+      <td>Brighton</td>
+      <td>Midfielder</td>
+      <td>9.0</td>
+      <td>1.636364</td>
+      <td>5.5</td>
+      <td>1.368619</td>
+      <td>7.527406</td>
+      <td>12.237568</td>
+      <td>7.0</td>
+    </tr>
+    <tr>
+      <th>Sarr</th>
+      <td>Watford</td>
+      <td>Midfielder</td>
+      <td>9.0</td>
+      <td>1.500000</td>
+      <td>6.0</td>
+      <td>1.402558</td>
+      <td>8.415348</td>
+      <td>12.118055</td>
+      <td>8.0</td>
     </tr>
     <tr>
       <th>Soucek</th>
       <td>West Ham</td>
       <td>Midfielder</td>
-      <td>3.0</td>
-      <td>27.692308</td>
-      <td>5.2</td>
-      <td>26.141262</td>
-      <td>135.934564</td>
-      <td>9.946180</td>
-      <td>7.0</td>
-    </tr>
-    <tr>
-      <th>Gündogan</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>2.8</td>
-      <td>28.035714</td>
-      <td>5.6</td>
-      <td>24.372323</td>
-      <td>136.485009</td>
-      <td>9.932012</td>
       <td>8.0</td>
-    </tr>
-    <tr>
-      <th>Rashford</th>
-      <td>Man Utd</td>
-      <td>Midfielder</td>
-      <td>3.4</td>
-      <td>18.125000</td>
-      <td>9.6</td>
-      <td>19.722666</td>
-      <td>189.337590</td>
-      <td>9.808078</td>
+      <td>1.333333</td>
+      <td>6.0</td>
+      <td>1.377237</td>
+      <td>8.263424</td>
+      <td>10.893104</td>
       <td>9.0</td>
     </tr>
     <tr>
-      <th>Eze</th>
-      <td>Crystal Palace</td>
+      <th>Nørgaard</th>
+      <td>Brentford</td>
       <td>Midfielder</td>
-      <td>5.8</td>
-      <td>21.186441</td>
-      <td>5.9</td>
-      <td>21.596600</td>
-      <td>127.419941</td>
-      <td>9.664243</td>
+      <td>8.0</td>
+      <td>1.600000</td>
+      <td>5.0</td>
+      <td>1.214113</td>
+      <td>6.070564</td>
+      <td>10.855141</td>
       <td>10.0</td>
     </tr>
     <tr>
-      <th>Mané</th>
-      <td>Liverpool</td>
+      <th>Doucouré</th>
+      <td>Everton</td>
       <td>Midfielder</td>
-      <td>5.0</td>
-      <td>13.675214</td>
-      <td>11.7</td>
-      <td>16.211553</td>
-      <td>189.675166</td>
-      <td>9.661581</td>
+      <td>8.0</td>
+      <td>1.454545</td>
+      <td>5.5</td>
+      <td>1.278363</td>
+      <td>7.030999</td>
+      <td>10.735574</td>
       <td>11.0</td>
     </tr>
     <tr>
-      <th>Mount</th>
+      <th>Murphy</th>
+      <td>Newcastle</td>
+      <td>Midfielder</td>
+      <td>7.0</td>
+      <td>1.400000</td>
+      <td>5.0</td>
+      <td>1.327688</td>
+      <td>6.638440</td>
+      <td>9.900218</td>
+      <td>12.0</td>
+    </tr>
+    <tr>
+      <th>Pulisic</th>
       <td>Chelsea</td>
       <td>Midfielder</td>
-      <td>2.7</td>
-      <td>19.863014</td>
-      <td>7.3</td>
-      <td>21.412286</td>
-      <td>156.309687</td>
-      <td>8.504184</td>
-      <td>12.0</td>
+      <td>8.0</td>
+      <td>1.000000</td>
+      <td>8.0</td>
+      <td>1.131687</td>
+      <td>9.053495</td>
+      <td>9.779298</td>
+      <td>13.0</td>
+    </tr>
+    <tr>
+      <th>Greenwood</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>8.0</td>
+      <td>1.066667</td>
+      <td>7.5</td>
+      <td>1.130016</td>
+      <td>8.475118</td>
+      <td>9.751855</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Jota</th>
+      <td>Liverpool</td>
+      <td>Midfielder</td>
+      <td>8.0</td>
+      <td>1.066667</td>
+      <td>7.5</td>
+      <td>1.105418</td>
+      <td>8.290631</td>
+      <td>9.642046</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Fred</th>
+      <td>Man Utd</td>
+      <td>Midfielder</td>
+      <td>7.0</td>
+      <td>1.400000</td>
+      <td>5.0</td>
+      <td>1.232339</td>
+      <td>6.161694</td>
+      <td>9.616453</td>
+      <td>16.0</td>
     </tr>
     <tr>
       <th>Westwood</th>
       <td>Burnley</td>
       <td>Midfielder</td>
-      <td>4.8</td>
-      <td>20.754717</td>
-      <td>5.3</td>
-      <td>21.971329</td>
-      <td>116.448045</td>
-      <td>8.478532</td>
-      <td>13.0</td>
-    </tr>
-    <tr>
-      <th>Trossard</th>
-      <td>Brighton</td>
-      <td>Midfielder</td>
-      <td>3.2</td>
-      <td>23.818182</td>
+      <td>7.0</td>
+      <td>1.272727</td>
       <td>5.5</td>
-      <td>21.888448</td>
-      <td>120.386463</td>
-      <td>8.430041</td>
-      <td>14.0</td>
-    </tr>
-    <tr>
-      <th>Tielemans</th>
-      <td>Leicester</td>
-      <td>Midfielder</td>
-      <td>2.7</td>
-      <td>20.468750</td>
-      <td>6.4</td>
-      <td>22.104837</td>
-      <td>141.470955</td>
-      <td>8.071472</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>Højbjerg</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>4.2</td>
-      <td>21.428571</td>
-      <td>4.9</td>
-      <td>22.361412</td>
-      <td>109.570920</td>
-      <td>8.001474</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Foden</th>
-      <td>Man City</td>
-      <td>Midfielder</td>
-      <td>4.0</td>
-      <td>21.147541</td>
-      <td>6.1</td>
-      <td>18.622717</td>
-      <td>113.598572</td>
-      <td>7.961418</td>
+      <td>1.206610</td>
+      <td>6.636354</td>
+      <td>9.294151</td>
       <td>17.0</td>
     </tr>
     <tr>
-      <th>Raphinha</th>
-      <td>Leeds</td>
+      <th>McGinn</th>
+      <td>Aston Villa</td>
       <td>Midfielder</td>
-      <td>2.6</td>
-      <td>23.272727</td>
-      <td>5.5</td>
-      <td>21.446575</td>
-      <td>117.956163</td>
-      <td>7.808877</td>
+      <td>7.0</td>
+      <td>1.166667</td>
+      <td>6.0</td>
+      <td>1.146086</td>
+      <td>6.876517</td>
+      <td>8.933078</td>
       <td>18.0</td>
+    </tr>
+    <tr>
+      <th>Kovacic</th>
+      <td>Chelsea</td>
+      <td>Midfielder</td>
+      <td>6.0</td>
+      <td>1.200000</td>
+      <td>5.0</td>
+      <td>1.080497</td>
+      <td>5.402483</td>
+      <td>7.871632</td>
+      <td>19.0</td>
     </tr>
     <tr>
       <th>Groß</th>
       <td>Brighton</td>
       <td>Midfielder</td>
-      <td>4.3</td>
-      <td>19.655172</td>
-      <td>5.8</td>
-      <td>19.773008</td>
-      <td>114.683445</td>
-      <td>7.801144</td>
-      <td>19.0</td>
-    </tr>
-    <tr>
-      <th>Bale</th>
-      <td>Spurs</td>
-      <td>Midfielder</td>
-      <td>8.0</td>
-      <td>10.869565</td>
-      <td>9.2</td>
-      <td>12.248072</td>
-      <td>112.682259</td>
-      <td>7.748204</td>
+      <td>6.0</td>
+      <td>1.000000</td>
+      <td>6.0</td>
+      <td>1.072295</td>
+      <td>6.433770</td>
+      <td>7.535027</td>
       <td>20.0</td>
     </tr>
   </tbody>
