--- a/templates/defenders.html
+++ b/templates/defenders.html
@@ -27,243 +27,243 @@
   </thead>
   <tbody>
     <tr>
-      <th>Dallas</th>
-      <td>Leeds</td>
+      <th>Alonso</th>
+      <td>Chelsea</td>
       <td>Defender</td>
-      <td>5.4</td>
-      <td>31.296296</td>
-      <td>5.4</td>
-      <td>25.715521</td>
-      <td>138.863815</td>
-      <td>12.789683</td>
+      <td>15.0</td>
+      <td>2.727273</td>
+      <td>5.5</td>
+      <td>2.556364</td>
+      <td>14.060000</td>
+      <td>25.170000</td>
       <td>1.0</td>
     </tr>
     <tr>
-      <th>Robertson</th>
-      <td>Liverpool</td>
+      <th>Chalobah</th>
+      <td>Chelsea</td>
       <td>Defender</td>
-      <td>5.4</td>
-      <td>21.250000</td>
-      <td>7.2</td>
-      <td>23.627876</td>
-      <td>170.120709</td>
-      <td>11.885334</td>
+      <td>14.0</td>
+      <td>2.800000</td>
+      <td>5.0</td>
+      <td>2.418263</td>
+      <td>12.091313</td>
+      <td>23.442520</td>
       <td>2.0</td>
     </tr>
     <tr>
-      <th>Alexander-Arnold</th>
-      <td>Liverpool</td>
+      <th>Pereira</th>
+      <td>Leicester</td>
       <td>Defender</td>
-      <td>6.0</td>
-      <td>20.129870</td>
-      <td>7.7</td>
-      <td>21.553722</td>
-      <td>165.963661</td>
-      <td>11.826174</td>
+      <td>12.0</td>
+      <td>2.181818</td>
+      <td>5.5</td>
+      <td>2.104646</td>
+      <td>11.575556</td>
+      <td>19.867309</td>
       <td>3.0</td>
     </tr>
     <tr>
-      <th>Digne</th>
-      <td>Everton</td>
+      <th>Pinnock</th>
+      <td>Brentford</td>
       <td>Defender</td>
-      <td>6.2</td>
-      <td>19.354839</td>
-      <td>6.2</td>
-      <td>22.848898</td>
-      <td>141.663169</td>
-      <td>10.642751</td>
+      <td>11.0</td>
+      <td>2.444444</td>
+      <td>4.5</td>
+      <td>1.870495</td>
+      <td>8.417227</td>
+      <td>17.890667</td>
       <td>4.0</td>
     </tr>
     <tr>
-      <th>Wan-Bissaka</th>
-      <td>Man Utd</td>
+      <th>Dier</th>
+      <td>Spurs</td>
       <td>Defender</td>
-      <td>3.8</td>
-      <td>24.827586</td>
-      <td>5.8</td>
-      <td>23.972910</td>
-      <td>139.042878</td>
-      <td>10.214596</td>
+      <td>7.0</td>
+      <td>1.555556</td>
+      <td>4.5</td>
+      <td>1.436747</td>
+      <td>6.465360</td>
+      <td>11.319359</td>
       <td>5.0</td>
     </tr>
     <tr>
-      <th>Chilwell</th>
-      <td>Chelsea</td>
+      <th>Reguilón</th>
+      <td>Spurs</td>
       <td>Defender</td>
-      <td>4.2</td>
-      <td>22.203390</td>
-      <td>5.9</td>
-      <td>21.568107</td>
-      <td>127.251834</td>
-      <td>9.312721</td>
+      <td>7.0</td>
+      <td>1.400000</td>
+      <td>5.0</td>
+      <td>1.436747</td>
+      <td>7.183733</td>
+      <td>11.312473</td>
       <td>6.0</td>
     </tr>
     <tr>
-      <th>Keane</th>
-      <td>Everton</td>
+      <th>Thomas</th>
+      <td>Leicester</td>
       <td>Defender</td>
-      <td>3.5</td>
-      <td>25.400000</td>
-      <td>5.0</td>
-      <td>23.891508</td>
-      <td>119.457542</td>
-      <td>9.236216</td>
+      <td>7.0</td>
+      <td>1.555556</td>
+      <td>4.5</td>
+      <td>1.387246</td>
+      <td>6.242606</td>
+      <td>11.135858</td>
       <td>7.0</td>
     </tr>
     <tr>
       <th>Cresswell</th>
       <td>West Ham</td>
       <td>Defender</td>
-      <td>2.2</td>
-      <td>26.250000</td>
-      <td>5.6</td>
-      <td>23.382632</td>
-      <td>130.942739</td>
-      <td>9.109143</td>
+      <td>7.0</td>
+      <td>1.272727</td>
+      <td>5.5</td>
+      <td>1.278275</td>
+      <td>7.030514</td>
+      <td>10.696435</td>
       <td>8.0</td>
     </tr>
     <tr>
-      <th>Cancelo</th>
-      <td>Man City</td>
+      <th>van Dijk</th>
+      <td>Liverpool</td>
       <td>Defender</td>
-      <td>3.0</td>
-      <td>23.793103</td>
-      <td>5.8</td>
-      <td>22.739439</td>
-      <td>131.888747</td>
-      <td>9.106453</td>
+      <td>7.0</td>
+      <td>1.076923</td>
+      <td>6.5</td>
+      <td>1.131274</td>
+      <td>7.353278</td>
+      <td>10.208754</td>
       <td>9.0</td>
     </tr>
     <tr>
-      <th>Dunk</th>
-      <td>Brighton</td>
+      <th>Christensen</th>
+      <td>Chelsea</td>
       <td>Defender</td>
-      <td>3.2</td>
-      <td>26.875000</td>
-      <td>4.8</td>
-      <td>23.049328</td>
-      <td>110.636776</td>
-      <td>8.972408</td>
+      <td>7.0</td>
+      <td>1.400000</td>
+      <td>5.0</td>
+      <td>1.131274</td>
+      <td>5.656368</td>
+      <td>10.054260</td>
       <td>10.0</td>
     </tr>
     <tr>
-      <th>Godfrey</th>
-      <td>Everton</td>
+      <th>Tsimikas</th>
+      <td>Liverpool</td>
       <td>Defender</td>
       <td>6.0</td>
-      <td>19.607843</td>
-      <td>5.1</td>
-      <td>20.261151</td>
-      <td>103.331868</td>
-      <td>8.780913</td>
+      <td>1.500000</td>
+      <td>4.0</td>
+      <td>1.406550</td>
+      <td>5.626199</td>
+      <td>10.028654</td>
       <td>11.0</td>
     </tr>
     <tr>
-      <th>Alioski</th>
-      <td>Leeds</td>
+      <th>Amartey</th>
+      <td>Leicester</td>
       <td>Defender</td>
-      <td>5.4</td>
-      <td>25.116279</td>
-      <td>4.3</td>
-      <td>19.172826</td>
-      <td>82.443150</td>
-      <td>8.703510</td>
+      <td>6.0</td>
+      <td>1.500000</td>
+      <td>4.0</td>
+      <td>1.358128</td>
+      <td>5.432513</td>
+      <td>9.869099</td>
       <td>12.0</td>
     </tr>
     <tr>
-      <th>Coufal</th>
-      <td>West Ham</td>
+      <th>Rüdiger</th>
+      <td>Chelsea</td>
       <td>Defender</td>
-      <td>3.0</td>
-      <td>24.583333</td>
-      <td>4.8</td>
-      <td>23.879148</td>
-      <td>114.619908</td>
-      <td>8.486524</td>
-      <td>13.0</td>
-    </tr>
-    <tr>
-      <th>Evans</th>
-      <td>Leicester</td>
-      <td>Defender</td>
-      <td>5.0</td>
-      <td>19.464286</td>
-      <td>5.6</td>
-      <td>19.971126</td>
-      <td>111.838308</td>
-      <td>8.480299</td>
-      <td>14.0</td>
-    </tr>
-    <tr>
-      <th>Targett</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>2.1</td>
-      <td>26.600000</td>
-      <td>5.0</td>
-      <td>23.305190</td>
-      <td>116.525950</td>
-      <td>8.452378</td>
-      <td>15.0</td>
-    </tr>
-    <tr>
-      <th>Konsa</th>
-      <td>Aston Villa</td>
-      <td>Defender</td>
-      <td>2.1</td>
-      <td>24.893617</td>
-      <td>4.7</td>
-      <td>24.153896</td>
-      <td>113.523310</td>
-      <td>7.910938</td>
-      <td>16.0</td>
-    </tr>
-    <tr>
-      <th>Shaw</th>
-      <td>Man Utd</td>
-      <td>Defender</td>
-      <td>2.2</td>
-      <td>22.545455</td>
+      <td>6.0</td>
+      <td>1.090909</td>
       <td>5.5</td>
-      <td>22.417378</td>
-      <td>123.295577</td>
-      <td>7.881026</td>
-      <td>17.0</td>
+      <td>1.253581</td>
+      <td>6.894696</td>
+      <td>9.499199</td>
+      <td>13.0</td>
     </tr>
     <tr>
       <th>Ayling</th>
       <td>Leeds</td>
       <td>Defender</td>
-      <td>4.0</td>
-      <td>22.272727</td>
-      <td>4.4</td>
-      <td>22.483849</td>
-      <td>98.928935</td>
-      <td>7.874691</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.277152</td>
+      <td>5.747182</td>
+      <td>9.486888</td>
+      <td>14.0</td>
+    </tr>
+    <tr>
+      <th>Tanganga</th>
+      <td>Spurs</td>
+      <td>Defender</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.273899</td>
+      <td>5.732545</td>
+      <td>9.474831</td>
+      <td>15.0</td>
+    </tr>
+    <tr>
+      <th>Henry</th>
+      <td>Brentford</td>
+      <td>Defender</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.253581</td>
+      <td>5.641115</td>
+      <td>9.399512</td>
+      <td>16.5</td>
+    </tr>
+    <tr>
+      <th>Jansson</th>
+      <td>Brentford</td>
+      <td>Defender</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.253581</td>
+      <td>5.641115</td>
+      <td>9.399512</td>
+      <td>16.5</td>
+    </tr>
+    <tr>
+      <th>Ajer</th>
+      <td>Brentford</td>
+      <td>Defender</td>
+      <td>6.0</td>
+      <td>1.333333</td>
+      <td>4.5</td>
+      <td>1.244095</td>
+      <td>5.598429</td>
+      <td>9.364348</td>
       <td>18.0</td>
     </tr>
     <tr>
-      <th>James</th>
-      <td>Chelsea</td>
+      <th>Söyüncü</th>
+      <td>Leicester</td>
       <td>Defender</td>
-      <td>3.3</td>
-      <td>21.764706</td>
-      <td>5.1</td>
-      <td>21.634357</td>
-      <td>110.335223</td>
-      <td>7.822799</td>
+      <td>6.0</td>
+      <td>1.200000</td>
+      <td>5.0</td>
+      <td>1.225678</td>
+      <td>6.128389</td>
+      <td>9.287775</td>
       <td>19.0</td>
     </tr>
     <tr>
-      <th>Dias</th>
-      <td>Man City</td>
+      <th>Tarkowski</th>
+      <td>Burnley</td>
       <td>Defender</td>
-      <td>0.8</td>
-      <td>23.220339</td>
-      <td>5.9</td>
-      <td>23.194214</td>
-      <td>136.845861</td>
-      <td>7.742751</td>
+      <td>6.0</td>
+      <td>1.200000</td>
+      <td>5.0</td>
+      <td>1.115914</td>
+      <td>5.579568</td>
+      <td>8.835667</td>
       <td>20.0</td>
     </tr>
   </tbody>
